--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.2",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
